--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "client": "npm run start --prefix client",
-    "dev": "concurrently \"npm start\" \"npm run client\""
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
